--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,5 +49,5 @@ body {
 .bg-url-logo{
   background-position: center;
   background-repeat:no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
